# fastapi_project

./: .env  .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
Release/: Future_Release_Items.md
alembic/: env.py
alembic/versions/: 376015d0c0f0_add_refresh_token_table.py  89cc93b7e46d_initial.py  cacf1e338baa_create_users_table.py  d1e6fe5042de_initial.py
core/: config.py  dependencies.py
etc/AI_Prompt/: reducing_token.md
etc/Database_Setup/: Database_and_Users_setup.sql
etc/alembic/: notes.md
etc/docker/: docker_container_setup.md
fastapi_app/: main.py
fastapi_app/auth/: __init__.py  _jwt.py  dependencies.py  jwt.py  refresh.py
fastapi_app/core/: __init__.py  config.py  database.py  dependencies.py  jobs.py  security.py  store.py
fastapi_app/logger_engine/: __init__.py  logger.py
fastapi_app/models/: __init__.py  job.py  user.py
fastapi_app/models/orm/: __init__.py  base.py  job.py  refresh_token.py  user.py
fastapi_app/rmq/: __init__.py  consumer.py  health.py  publisher.py  setup.py
fastapi_app/routers/: async_demo.py  health.py  jobs.py  users.py
fastapi_app/services/: __init__.py  user_service.py
fastapi_app/tests/: conftest.py  test_jobs.py  test_rmq_health.py
rmq/: __init__.py  consumer.py  health.py  publisher.py
routers/: __init__.py
tests/: test_jobs.py  test_users.py
