[project]
name = "fastapi-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aio-pika>=9.4.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.5",
    "aiomysql>=0.3.2",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = [
    "fastapi_project",
]
